text wrapping issues should be solved
title

--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     font-family: sans-serif;
+    font-size: 20px;
     height: 100%;
     box-sizing: border-box;
     overflow: auto;
@@ -48,8 +49,6 @@ body, html {
     color: darkcyan;
 }*/
 
-
-
 .float-container {
     position: relative;
     border: 1px black;
@@ -67,7 +66,7 @@ body, html {
 .float-child {
     border: 1px cadetblue; 
     color:darkcyan;
-    padding: 13px 15px;
+    padding: 13px 0px;
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -86,11 +85,11 @@ body, html {
     border: 1px solid black;
     justify-content: center; 
     align-items: center; 
-    white-space: pre-wrap;
-    word-wrap: normal; /* Prevent breaking words mid-word */
-    overflow-wrap: normal; /* Prevent breaking words mid-word */
-    width: fit-content; /* Ensure the box fits its content */
-    max-width: 100%; /* Prevents overflowing the container */
+    white-space: pre;
+    word-wrap: normal; 
+    overflow-wrap: normal;
+    width: fit-content; 
+    max-width: 100%;
 }
 
 
